--- a/app/src/main/res/drawable/beige_background.xml
+++ b/app/src/main/res/drawable/beige_background.xml
@@ -2,14 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true">
         <shape>
-            <solid android:color="@color/pastel_blue"/>
-            <corners android:radius="15dp"></corners>
+            <solid android:color="@color/dark_beige"/>
+            <corners android:radius="10dp"></corners>
         </shape>
     </item>
     <item>
         <shape>
             <solid android:color="@color/beige"></solid>
-            <corners android:radius="15dp"></corners>
+            <corners android:radius="10dp"></corners>
         </shape>
     </item>
 </selector>
