--- a/app/src/main/res/drawable/white_background.xml
+++ b/app/src/main/res/drawable/white_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/beige" />
-    <corners android:radius="40dp"></corners>
-
+    <solid android:color="@color/white"></solid>
+    <corners android:radius="10dp"></corners>
 </shape>
+
