Back button ei toimi, muuten ok.

--- a/app/src/main/res/drawable/beige_white_background.xml
+++ b/app/src/main/res/drawable/beige_white_background.xml
@@ -8,9 +8,13 @@
     </item>
     <item>
         <shape>
-            <solid android:color="@color/beige" />
+            <gradient
+                android:endColor="@color/white"
+                android:startColor="@color/beige"
+                />
             <corners android:radius="10dp" />
             <stroke android:width="1dip" android:color="@color/black" />
         </shape>
     </item>
 </selector>
+
