--- a/app/src/main/res/drawable/orange_background.xml
+++ b/app/src/main/res/drawable/orange_background.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@color/orange" />
     <corners android:radius="10dp" />
-    <solid android:color="@color/white" />
-    <stroke
-        android:width="1dip"
-        android:color="@color/black" />
+    <stroke android:width="1dip" android:color="@color/black" />
 </shape>
 
