--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -4,35 +4,62 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/light_gray"
     tools:context=".GameActivity">
 
-    <TextView
-        android:id="@+id/playerTextView"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:background="@drawable/gray_background"
-        android:fontFamily="@font/josefin_sans"
-        android:gravity="center"
-        android:textColor="@color/black"
-        android:textSize="34sp"
+        android:background="@drawable/beige_white_background"
         app:layout_constraintBottom_toBottomOf="@+id/pointsTextView"
         app:layout_constraintEnd_toStartOf="@+id/pointsTextView"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/pointsTextView" />
+        app:layout_constraintTop_toTopOf="@+id/pointsTextView">
+
+        <TextView
+            android:id="@+id/winnerTextView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/beige_white_background"
+            android:fontFamily="@font/josefin_sans"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="34sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/pointsToWinTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="1dp"
+            android:fontFamily="@font/josefin_sans"
+            android:text="@string/points_to_win"
+            android:textColor="@color/black"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/pointsTextView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:background="@drawable/beige_background"
+        android:ems="2"
         android:fontFamily="@font/crimson_text_bold"
         android:gravity="center"
         android:padding="12dp"
@@ -47,7 +74,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:background="@drawable/gray_background"
+        android:background="@drawable/white_background"
         android:indeterminate="false"
         android:max="12"
         android:padding="20dp"
@@ -68,7 +95,6 @@
         android:text="@string/ok"
         app:layout_constraintBottom_toTopOf="@+id/leftNavigationButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
     <android.widget.Button
