--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,10 +8,13 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="beige">#FFEFD8</color>
-    <color name="light_gray">#F1F1F1</color>
+    <color name="beige">#FFF5BD</color>
+    <color name="light_gray">#F4F4F4</color>
     <color name="gray">#DFDFDF</color>
     <color name="dark_green">#56AE57</color>
     <color name="light_green">#CDFFC4</color>
     <color name="dark_beige">#FFDFB2</color>
+    <color name="yellow">#FFEB3B</color>
+    <color name="orange">#FF8D69</color>
+    <color name="purple">#B791FF</color>
 </resources>
