--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="yellow">#FFEB3B</color>
     <color name="orange">#FF8D69</color>
     <color name="purple">#B791FF</color>
+    <color name="gold">#FFFDD017</color>
 </resources>
