--- a/app/src/main/res/layout/vertical_player_view.xml
+++ b/app/src/main/res/layout/vertical_player_view.xml
@@ -21,28 +21,14 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/points2TV"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:fontFamily="@font/crimson_text_bold"
-            android:gravity="bottom|center"
-            android:minEms="1"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/points1TV"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
             android:id="@+id/playerNameTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:ems="5"
             android:fontFamily="@font/josefin_sans"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textSize="20sp"
-            app:layout_constraintEnd_toStartOf="@+id/points2TV"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -58,32 +44,30 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/points0TV"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:fontFamily="@font/crimson_text_bold"
-            android:gravity="bottom|center"
-            android:minEms="1"
-            android:textSize="20sp"
+        <ScrollView
+            android:id="@+id/childScroll"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/totalPointsTextView"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/points1TV"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:fontFamily="@font/crimson_text_bold"
-            android:gravity="bottom|center"
-            android:minEms="1"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/points0TV"
+            app:layout_constraintStart_toEndOf="@+id/playerNameTextView"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="1.0">
+
+            <TextView
+                android:id="@+id/pointsTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="none"
+                android:fontFamily="@font/josefin_sans"
+                android:gravity="bottom|end"
+                android:singleLine="true"
+                android:text="666"
+                android:textSize="24sp"
+                tools:visibility="visible" />
+        </ScrollView>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
