--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -94,33 +94,10 @@
         android:background="@drawable/start_button"
         android:enabled="false"
         android:padding="10dp"
-        android:text="@string/ok"
-        app:layout_constraintBottom_toTopOf="@+id/leftNavigationButton"
+        android:text="@android:string/ok"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <android.widget.Button
-        android:id="@+id/leftNavigationButton"
-        android:layout_width="0dp"
-        android:layout_height="32dp"
-        android:background="@drawable/navigation_button"
-        android:enabled="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintWidth_percent="0.5" />
-
-    <android.widget.Button
-        android:id="@+id/rightNavigationButton"
-        android:layout_width="0dp"
-        android:layout_height="32dp"
-        android:background="@drawable/navigation_button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintWidth_percent="0.5" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/verticalRecyclerView"
@@ -151,7 +128,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fontFamily="@font/josefin_sans"
-        android:gravity="center_vertical"
+        android:gravity="center"
         android:padding="8dp"
         android:text="@string/congratulations"
         android:textColor="@color/black"
