--- a/app/src/main/res/layout/activity_scorecard.xml
+++ b/app/src/main/res/layout/activity_scorecard.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PlayerStatsActivity">
+    tools:context=".ScoreCardActivity">
 
     <TextView
-        android:id="@+id/stats_playerNameTV"
+        android:id="@+id/playerNameTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -27,7 +27,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/stats_playerNameTV">
+        app:layout_constraintTop_toBottomOf="@+id/playerNameTV">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,14 +36,14 @@
             android:paddingBottom="32dp">
 
             <TextView
-                android:id="@+id/stats_otherTV"
+                android:id="@+id/allTossesTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="monospace"
                 android:gravity="center_horizontal" />
 
             <TextView
-                android:id="@+id/stats_pointsTV"
+                android:id="@+id/otherStatsTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
