--- a/app/src/main/res/layout/vertical_player_view.xml
+++ b/app/src/main/res/layout/vertical_player_view.xml
@@ -61,6 +61,7 @@
                 android:ellipsize="none"
                 android:fontFamily="monospace"
                 android:gravity="bottom|end"
+                android:scrollbars="none"
                 android:singleLine="true"
                 tools:visibility="visible" />
         </ScrollView>
