--- a/app/src/main/res/layout/activity_all_stats.xml
+++ b/app/src/main/res/layout/activity_all_stats.xml
@@ -7,7 +7,9 @@
     android:background="@color/light_gray"
     tools:context=".AllStatsActivity">
 
-
+    <include
+        android:id="@+id/include3"
+        layout="@layout/title_bar" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/allStatsRW"
@@ -15,54 +17,12 @@
         android:layout_height="0dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/allStatsTV" />
+        app:layout_constraintTop_toBottomOf="@+id/include3" />
 
-    <ImageButton
-        android:id="@+id/previousIB"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:adjustViewBounds="true"
-        android:background="@color/light_gray"
-        android:padding="32dp"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toTopOf="@+id/allStatsRW"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/arrow_back" />
-
-    <ImageButton
-        android:id="@+id/nextIB"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
-        android:adjustViewBounds="true"
-        android:background="@color/light_gray"
-        android:padding="32dp"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toTopOf="@+id/allStatsRW"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/arrow_forward" />
-
-    <TextView
-        android:id="@+id/allStatsTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:fontFamily="@font/josefin_sans"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
