--- a/app/src/main/res/layout/activity_saved_games.xml
+++ b/app/src/main/res/layout/activity_saved_games.xml
@@ -7,18 +7,9 @@
     android:background="@color/light_gray"
     tools:context=".SavedGamesActivity">
 
-    <TextView
-        android:id="@+id/savedGamesTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:fontFamily="@font/josefin_sans"
-        android:text="@string/saved_games"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <include
+        android:id="@+id/include2"
+        layout="@layout/title_bar" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/savedGamesRW"
@@ -26,12 +17,10 @@
         android:layout_height="0dp"
         android:layout_marginStart="1dp"
         android:layout_marginLeft="1dp"
-        android:layout_marginTop="32dp"
         android:layout_marginEnd="1dp"
         android:layout_marginRight="1dp"
-        android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/savedGamesTV" />
+        app:layout_constraintTop_toBottomOf="@+id/include2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
