--- a/app/src/main/res/layout/activity_select_players.xml
+++ b/app/src/main/res/layout/activity_select_players.xml
@@ -7,6 +7,11 @@
     android:background="@color/light_gray"
     tools:context=".SelectPlayersActivity">
 
+    <include
+        android:id="@+id/include5"
+        layout="@layout/title_bar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <android.widget.Button
         android:id="@+id/selectPlayersOKButton"
         android:layout_width="wrap_content"
@@ -20,33 +25,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/choosePlayerTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:fontFamily="@font/josefin_sans"
-        android:text="@string/choose_player"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/selectPlayersRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/selectPlayersOKButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/choosePlayerTextView">
+        app:layout_constraintTop_toBottomOf="@+id/include5">
 
     </androidx.recyclerview.widget.RecyclerView>
 
