koodin siistimistä, lisätty kuvakkeet

--- a/app/src/main/res/layout/player_card.xml
+++ b/app/src/main/res/layout/player_card.xml
@@ -5,19 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/light_gray"
-    android:paddingBottom="4dp">
+    android:padding="1dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/listItemView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginLeft="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginRight="1dp"
         android:background="@drawable/beige_white_background"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/playerImageView"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -41,7 +40,7 @@
             android:gravity="center"
             android:minEms="2"
             android:textSize="28sp"
-            android:visibility="gone"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -57,8 +56,24 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/remove_player" />
+            app:srcCompat="@drawable/remove_player"
+            tools:visibility="gone" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/playerImageView"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:background="@color/white"
+        android:padding="2dp"
+        android:scaleType="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
+        app:srcCompat="@drawable/camera"
+        app:strokeColor="@color/black"
+        app:strokeWidth="1dp"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
