--- a/app/src/main/res/layout/player_card.xml
+++ b/app/src/main/res/layout/player_card.xml
@@ -61,19 +61,9 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/playerImageView"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:background="@color/white"
-        android:padding="2dp"
-        android:scaleType="center"
+    <include
+        layout="@layout/player_image"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
-        app:srcCompat="@drawable/camera"
-        app:strokeColor="@color/black"
-        app:strokeWidth="1dp"
-        tools:visibility="visible" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
