--- a/app/src/main/res/layout/title_bar.xml
+++ b/app/src/main/res/layout/title_bar.xml
@@ -20,47 +20,78 @@
             android:id="@+id/previousIB"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginLeft="24dp"
-            android:adjustViewBounds="true"
+            android:adjustViewBounds="false"
             android:background="@android:color/transparent"
-            android:padding="32dp"
+            android:paddingLeft="24dp"
+            android:paddingRight="24dp"
             android:scaleType="center"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/arrow_back" />
+            app:srcCompat="@drawable/arrow_back"
+            tools:visibility="visible" />
 
         <ImageButton
             android:id="@+id/nextIB"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginRight="24dp"
-            android:adjustViewBounds="true"
+            android:adjustViewBounds="false"
             android:background="@android:color/transparent"
-            android:padding="32dp"
+            android:paddingLeft="24dp"
+            android:paddingRight="24dp"
             android:scaleType="center"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/arrow_forward" />
+            app:srcCompat="@drawable/arrow_forward"
+            tools:visibility="visible" />
 
-        <TextView
-            android:id="@+id/titleTV"
-            android:layout_width="wrap_content"
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout4"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
-            android:fontFamily="@font/josefin_sans"
-            android:textColor="@color/black"
-            android:textSize="24sp"
+            android:layout_marginTop="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toStartOf="@+id/nextIB"
+            app:layout_constraintStart_toEndOf="@+id/previousIB"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/titleTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/josefin_sans"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:text="Hermanni"
+                android:textColor="@color/black"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/titleBar_playerImageView"
+                tools:visibility="visible" />
+
+            <com.google.android.material.imageview.ShapeableImageView
+
+                android:id="@+id/titleBar_playerImageView"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:background="@color/white"
+                android:padding="2dp"
+                android:scaleType="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
+                app:srcCompat="@drawable/camera"
+                app:strokeColor="@color/black"
+                app:strokeWidth="1dp"
+                tools:visibility="visible" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
