--- a/app/src/main/res/layout/player_image.xml
+++ b/app/src/main/res/layout/player_image.xml
@@ -7,7 +7,7 @@
         android:layout_height="75dp"
         android:background="@color/white"
         android:padding="2dp"
-        android:scaleType="center"
+        android:scaleType="centerCrop"
         app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
         app:srcCompat="@drawable/camera"
         app:strokeColor="@color/black"
