--- a/app/src/main/res/layout/activity_rules.xml
+++ b/app/src/main/res/layout/activity_rules.xml
@@ -36,14 +36,15 @@
         app:srcCompat="@drawable/muodostelma" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:id="@+id/linkTV"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/josefin_sans"
+        android:gravity="center"
         android:text="@string/source"
         android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="@+id/imageView3"
-        app:layout_constraintStart_toStartOf="@+id/imageView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
